# LaserVST

./: .gitignore  CMakeLists.txt  README.md
resource/: laser_editor.uidesc
source/: laser_cids.h  laser_controller.cpp  laser_controller.h  laser_entry.cpp  laser_processor.cpp  laser_processor.h  params.h  version.h
